# weather_app_speckit

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/v1/: __init__.py  monthly_trend.py  yearly_summary.py
backend/src/api/v1/dtos/: __init__.py  monthly_trend_dtos.py  yearly_summary_dtos.py
backend/src/domain/models/: __init__.py  weather.py
backend/src/domain/services/: __init__.py  monthly_trend_service.py  yearly_aggregation_service.py
backend/src/infrastructure/: __init__.py  csv_loader.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py
backend/tests/integration/: test_yearly_summary_endpoint.py
backend/tests/unit/: test_yearly_aggregation.py
frontend/: jest.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: YearlyAveragesChart.tsx
frontend/tests/e2e/: yearly_overview.spec.ts
frontend/tests/unit/: YearlyAveragesChart.test.tsx
specs/001-monthly-weather-trends/: spec.md  tasks.md
specs/001-monthly-weather-trends/checklists/: requirements.md
specs/1-monthly-weather-trends/: data-model.md  plan.md  research.md  tasks.md
specs/1-monthly-weather-trends/checklists/: requirements.md
specs/1-monthly-weather-trends/contracts/: api-contracts.md
