[project]
name = "weather-backend"
version = "0.1.0"
description = "FastAPI backend for weather trends"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
